# computer-vision

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  gameplan.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  smiley_arthur.ipynb  train_labels.csv  wido-smiley.ipynb
.claude/: settings.local.json
.github/workflows/: lint.yml  test.yml
config/: cnn.yaml  mlp.yaml  resnet.yaml  senet.yaml  vit.yaml
data/: train_labels.csv
models/: CNN.py  Ensemble.py  MLP.py  ResNet.py  SENET.py  VIT.py  __init__.py
notebooks/: README.md  eda (5).ipynb  eda.ipynb  eda_complete.ipynb  requirements.txt  train_colab.ipynb
tests/: __init__.py  test_models.py  test_training.py
utils/: __init__.py  augment_data.py  dataloader.py  kaggle_inference.py  kaggle_inference_tta.py  train_model.py  train_model_enhanced.py  train_transfer_learning.py  tune_hyperparameters.py
